[gd_scene load_steps=14 format=3 uid="uid://c6spio6b1rcr8"]

[ext_resource type="Script" path="res://Scripts/Main.gd" id="1_8gg7r"]
[ext_resource type="Script" path="res://Scripts/CardManager.gd" id="1_mkjuf"]
[ext_resource type="Texture2D" uid="uid://botk2ojkcr13t" path="res://Assets/backgroundEmpty.png" id="2_6cl77"]
[ext_resource type="Shader" path="res://Scripts/Cloud.gdshader" id="2_ceu07"]
[ext_resource type="PackedScene" uid="uid://u4eimyi07cla" path="res://Scenes/CardSlot.tscn" id="3_7oebt"]
[ext_resource type="Script" path="res://Scripts/PlayerHand.gd" id="3_uln1a"]
[ext_resource type="Texture2D" uid="uid://cc6eqhq88abqj" path="res://Assets/UI_MobileIndivudals_g924.png" id="3_w06v6"]
[ext_resource type="Texture2D" uid="uid://dbpreffuygf0o" path="res://Assets/UI_MobileIndivudals_g938.png" id="4_pi25c"]
[ext_resource type="Script" path="res://Scripts/GameLogic.gd" id="6_m8fqk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_18xpc"]
shader = ExtResource("2_ceu07")

[sub_resource type="LabelSettings" id="LabelSettings_mq2ov"]
font_size = 60
font_color = Color(0, 0, 0, 1)
outline_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_e3oxw"]
font_size = 60
font_color = Color(0, 0, 0, 1)
outline_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_wcjv7"]
font_size = 100
font_color = Color(0, 0, 0, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_8gg7r")

[node name="UI" type="Control" parent="."]
custom_minimum_size = Vector2(1080, 1920)
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 960.0

[node name="Background" type="TextureRect" parent="UI"]
texture_repeat = 2
material = SubResource("ShaderMaterial_18xpc")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("2_6cl77")

[node name="ScoreLabel" type="Label" parent="UI"]
layout_mode = 1
offset_right = 1.0
offset_bottom = 69.0
size_flags_horizontal = 4
label_settings = SubResource("LabelSettings_mq2ov")

[node name="Reset" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -180.0
offset_top = 1737.0
offset_right = 27.0
offset_bottom = 1958.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
icon = ExtResource("3_w06v6")
flat = true

[node name="TimerLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -0.5
offset_right = 0.5
offset_bottom = 23.0
grow_horizontal = 2
size_flags_horizontal = 4
label_settings = SubResource("LabelSettings_e3oxw")

[node name="OperationLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -150.0
offset_right = 16.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_wcjv7")

[node name="GameTimer" type="Timer" parent="UI"]

[node name="HomeButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 50.0
offset_right = -13.0
offset_bottom = 271.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
icon = ExtResource("4_pi25c")
flat = true

[node name="CardSlot" parent="." instance=ExtResource("3_7oebt")]
position = Vector2(272, 832.5)

[node name="CardSlot2" parent="." instance=ExtResource("3_7oebt")]
position = Vector2(815, 830.5)

[node name="PlayerHand" type="Node2D" parent="."]
script = ExtResource("3_uln1a")

[node name="CardManager" type="Node2D" parent="."]
script = ExtResource("1_mkjuf")

[node name="GameLogic" type="Node2D" parent="."]
script = ExtResource("6_m8fqk")

[connection signal="pressed" from="UI/Reset" to="CardManager" method="_on_reset_pressed"]
[connection signal="pressed" from="UI/HomeButton" to="GameLogic" method="_on_Home_pressed"]
